[project]
name = "actos-parser"
version = "1.0.0"
description = "Python script to extract and decode measurement data from pcap files captured during ACTOS research flight operation"
requires-python = ">=3.14"
dependencies = [
    "pyyaml>=6.0.3",
]

[project.scripts]
actos-parser-nightly = "actos_parser:actos_parser"

[tool.setuptools]
py-modules = [
    "actos_parser",
    "actos_functions",
]
